src/components/PoemPage/PoemPage.css
.loader {
  color: white;
}

.clicked {
  /* background turns selection blue */
  background-color: rgb(177, 199, 255);
}

.chineseInfoContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 35%;
}

/* ------------------- */

.chineseTitle {
  font-size: 1.3rem;
  color: rgb(167, 165, 165);
  margin: auto;
  cursor: pointer;
  text-align: center;
}

.chineseAuthor {
  font-size: 1.3rem;
  color: rgb(167, 165, 165);
  margin: auto;
  cursor: pointer;
}

.chinesePoem {
  font-weight: 400;
  font-size: 2.1rem;
  /* margin-left: 14.9px; */
  margin-top: 10px;
  color: rgb(255, 255, 255);
  cursor: pointer;
  text-align: center;
  /* background-color: red; */
}

@media screen and (min-width: 750px) {
  .chineseInfoContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 25%;
  }
}

/* ---------------------------- */
/* These buttons should eventually be componentized  */
.characterButton {
  color: #000000;
  outline: 2.5px solid #000000;
  border: none;
  background-color: rgb(189, 168, 142);
  font-family: "Noto Sans JP", sans-serif;
  font-weight: 700;
  font-size: 18px;
  border-radius: 3px;
  position: absolute;
  top: 0;
  right: 0;
  margin-right: 10px;
  margin-top: 52.5px;
  max-width: 25.5px;
  max-height: 25.5px;
  width: 25.5px;
  height: 25.5px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

/*
* FIX - should not be absolute
*/
.englishButton {
  position: absolute;
  top: 0;
  right: 0;
  margin-right: 50px;
  margin-top: 50px;
  cursor: pointer;
}

.unsetWord {
  opacity: 0;
  background-color: red;
  position: absolute;
  z-index: -1;
  top: 0px;
  width: 99%;
  height: 100%;
}

